--- a/README
+++ b/README
@@ -1,28 +1,6 @@
-This is officially Polygons version a1.
-
 All of the art and code is hereby released under the GPLv3 license by Jessica Seibert. 
 
-Lets see how much work I can get done in a single night - Jan 3, 2010 @ 4:414 AM
-
-                   ▀ ▄▄     ▄▀
-                  ▄▄█████▄██▀      ▄▄▄▄▄▄▄▄   ▄██
-                    ▀██████     ▄████▀▀▀███ ▀███████▄▄
-                     ▄█████▄   ████▀  ░ █▄█    ▀ ▀▀▀███▄
-                      █████   ██▓█▌ ░  ▄█▀  ▄███▄▀   ████ 
-                      ██▓▒█ ░ █▓▒█ ░░ ▀     █████  ░  ████ 
-                      █▓▒░█ ░ ▀▒░█   ▄▄▄▄   ████▓ ░░░ ██▓█ 
-                      █▒░ █ ░  ▀▓█ ▄▀▀▀▀███▄ ▀██▒ ░░░ █▓▒█ 
-                   ░  █░ ░█ ░ ▀  ▀▄   ░  █▓██ ██░ ░░░ █▒░█ ░ 
-                   ▒  █ ░▒█ ░ █     ░░░░ █▒▓█ ██  ░░░ █░ █ ▒ 
-                  ░▓  █░▒▓█ ░ ██  ░░░░░░ █░▒█ ██ ░░░░ █ ░█ ▓░ 
-                  ▒█  █▒▓██   ███   ░░░  █▒░█ ██   ░░ █░▒█ █▒   
-                 ░▓██ █████▄ ▀████▀     ██▓▄▀ ██ ▀▄   █▒▓█ █▓
-                  ▀███▄▀█████████  ▀██████▀ ▄███ ▀█████▓█▀ ██░
-                   ▄▀▀▓▀  ▀▀▀▀▀▀  ▀▀▀▀▀▀   ▀▀▀▀    ▀▀▀▀▀ ▄██▀
-                      ▒                   roy/sac ▀  ▀▀▓█▀ ▀▄
-                      ░                                ▒
-                      ▒                                ░
-                     ░▓░                               ▒
-                      ▀                               ░▓░
-                                                       ▀
-
+     \    /\
+       )  ( ')
+      (  /  )
+ jgs   \(__)|
